# rust-texture-atlasser

./: .gitignore  Cargo.toml  readme.md
examples/: atlas_dir.rs
src/: atlasser.rs  error.rs  lib.rs
