[package]
name = "texture-atlasser"
version = "0.1.0"
authors = ["Florian Kaufmann <no@no.no>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Easy texture atlass creation with various options to fit different needs."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.23.14"
rectangle-pack = "^0.3.0"